welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:30: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.PictureMono3'
override def run() {
             ^